[gd_scene load_steps=8 format=2]

[ext_resource path="res://Hoarding Mini Game/HoarderManager.gd" type="Script" id=1]
[ext_resource path="res://Art_Assets/HoarderAssets.png" type="Texture" id=2]
[ext_resource path="res://Hoarding Mini Game/Entities/CurrentItem.tscn" type="PackedScene" id=3]
[ext_resource path="res://Hoarding Mini Game/Entities/SortBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Hoarding Mini Game/HoarderHand.gd" type="Script" id=5]
[ext_resource path="res://Hoarding Mini Game/Sprites.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 23.7281, 44.2415 )

[node name="HoarderManager" type="Node"]
pause_mode = 2
script = ExtResource( 1 )
boxes_path = NodePath("Boxes")
current_items = 30

[node name="GameTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
autostart = true

[node name="Background" type="Sprite" parent="."]
position = Vector2( 442.791, 270.743 )
scale = Vector2( 3.81077, 3.60342 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 232, 150 )

[node name="Selection" type="Sprite" parent="."]
position = Vector2( 171.714, 140.397 )
scale = Vector2( 5, 5 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 159, 151, 36, 34 )

[node name="CurrentItem" parent="." instance=ExtResource( 3 )]
position = Vector2( 460, 343 )
sprites_list = NodePath("../Sprites")

[node name="Boxes" type="Node" parent="."]

[node name="Trash" parent="Boxes" instance=ExtResource( 4 )]
position = Vector2( 171.714, 140.397 )
box_pos = Vector2( 0, 0 )

[node name="Electronics" parent="Boxes" instance=ExtResource( 4 )]
position = Vector2( 469, 136 )
box_pos = Vector2( 1, 0 )

[node name="Sprite" parent="Boxes/Electronics" index="1"]
position = Vector2( 0, -1.2 )
region_rect = Rect2( 233, 31, 32, 33 )

[node name="Paper" parent="Boxes" instance=ExtResource( 4 )]
position = Vector2( 739, 143 )
box_pos = Vector2( 2, 0 )

[node name="Sprite" parent="Boxes/Paper" index="1"]
position = Vector2( 0, 1.6 )
region_rect = Rect2( 233, 65, 32, 33 )

[node name="Clothes" parent="Boxes" instance=ExtResource( 4 )]
position = Vector2( 162, 396 )
box_pos = Vector2( 0, 1 )

[node name="Sprite" parent="Boxes/Clothes" index="1"]
region_rect = Rect2( 233, 132, 32, 30 )

[node name="Recycling" parent="Boxes" instance=ExtResource( 4 )]
position = Vector2( 732, 412 )
box_pos = Vector2( 2, 1 )

[node name="Sprite" parent="Boxes/Recycling" index="1"]
region_rect = Rect2( 233, 100, 32, 30 )

[node name="HoarderHand" type="Area2D" parent="."]
position = Vector2( 329, 538 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}
anchors = NodePath("../Anchors")
boxes = NodePath("../Boxes")
SPEED = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="HoarderHand"]
position = Vector2( 1.43102, 0 )
scale = Vector2( 0.94646, 1 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="HoarderHand"]
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 151, 12, 22 )

[node name="HoldTimer" type="Timer" parent="HoarderHand"]
wait_time = 0.5
one_shot = true

[node name="Anchors" type="Node" parent="."]

[node name="TrashAnchor" type="Node2D" parent="Anchors"]
position = Vector2( 168.2, -137.565 )

[node name="ElectronicsAnchor" type="Node2D" parent="Anchors"]
position = Vector2( 526.699, -131.476 )

[node name="PaperAnchor" type="Node2D" parent="Anchors"]
position = Vector2( 850.821, -143.476 )

[node name="ClothesAnchor" type="Node2D" parent="Anchors"]
position = Vector2( 165.744, 664.206 )

[node name="RecyclingAnchor" type="Node2D" parent="Anchors"]
position = Vector2( 855.732, 676.483 )

[node name="Sprites" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Recycling Sprites" type="Node" parent="Sprites"]

[node name="Bottle" type="Sprite" parent="Sprites/Recycling Sprites"]
visible = false
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 46, 155, 10, 21 )

[node name="Newspaper" type="Sprite" parent="Sprites/Recycling Sprites"]
visible = false
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 59, 163, 24, 12 )

[node name="Trash Sprites" type="Node" parent="Sprites"]

[node name="Wrapper" type="Sprite" parent="Sprites/Trash Sprites"]
visible = false
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 56, 182, 19, 18 )

[node name="Banana" type="Sprite" parent="Sprites/Trash Sprites"]
visible = false
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 25, 185, 23, 17 )

[node name="Paper Sprites" type="Node" parent="Sprites"]

[node name="List" type="Sprite" parent="Sprites/Paper Sprites"]
visible = false
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 113, 174, 19, 18 )

[node name="Beaver Book" type="Sprite" parent="Sprites/Paper Sprites"]
visible = false
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 138, 172, 16, 20 )

[node name="Electronics Sprites" type="Node" parent="Sprites"]

[node name="Controller" type="Sprite" parent="Sprites/Electronics Sprites"]
visible = false
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 85, 153, 19, 11 )

[node name="Mouse" type="Sprite" parent="Sprites/Electronics Sprites"]
visible = false
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 109, 153, 11, 19 )

[node name="Clothes Sprites" type="Node" parent="Sprites"]

[node name="Pants" type="Sprite" parent="Sprites/Clothes Sprites"]
visible = false
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 30, 152, 11, 24 )

[node name="Shirt" type="Sprite" parent="Sprites/Clothes Sprites"]
visible = false
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 14, 151, 15, 23 )

[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="timeout" from="HoarderHand/HoldTimer" to="HoarderHand" method="_on_HoldTimer_timeout"]

[editable path="Boxes/Trash"]
[editable path="Boxes/Electronics"]
[editable path="Boxes/Paper"]
[editable path="Boxes/Clothes"]
[editable path="Boxes/Recycling"]
